jalv (1.6.7) unstable;

  * Add missing option in console help output
  * Build Qt and Gtkmm versions as C++14
  * Clean up and modernize code
  * Fix crash when running jalv without arguments
  * Flush stdout after printing control values in console interface
  * Remove Qt4 support

 -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 18:15:03 +0000

jalv (1.6.6) stable;

  * Add a command line argument to select a specific UI
  * Explicitly support lv2:inPlaceBroken
  * Ignore ports with nonsense lv2:control designations
  * Remove Jack session support
  * Support port events for ui:showInterface UIs

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 22:05:38 +0000

jalv (1.6.4) stable;

  * Support rdfs:label for port groups
  * Use screen refresh rate with Gtk3 and Qt5

 -- David Robillard <d@drobilla.net>  Sun, 10 Nov 2019 21:56:49 +0000

jalv (1.6.2) stable;

  * Add jalv -i option to ignore stdin for background use
  * Add several commands to console interface
  * Add support for running as an internal Jack client (thanks Timo Wischer)
  * Add support for underscore in port names on command line (thanks Jośe
    Fernando Moyano)
  * Fix Jack deactivation
  * Fix compilation with recent Gtkmm versions that require C++11
  * Fix potential crash when closed with worker (thanks JP Cimalando)
  * Fix potential hang after Ctrl-c in console interface (thanks Laxmi Devi)
  * Make Suil dependency optional
  * Remove support for deprecated event and uri-map extensions

 -- David Robillard <d@drobilla.net>  Thu, 06 Jun 2019 20:38:01 +0000

jalv (1.6.0) stable;

  * Add PortAudio backend (compile time option, audio only)
  * Add Qt5 version
  * Add command prompt to console version for changing controls
  * Add generic Qt control UI from Amadeus Folego
  * Add option to print plugin trace messages
  * Allow Jack client name to be set from command line (thanks Adam Avramov)
  * Exit GUI versions on interrupt
  * Exit on Jack shutdown (patch from Robin Gareus)