@@ -1,13 +1,14 @@
 jalv (1.6.7) unstable;
 
   * Add missing option in console help output
+  * Add version option to console executable
   * Build Qt and Gtkmm versions as C++14
   * Clean up and modernize code
   * Fix crash when running jalv without arguments
   * Flush stdout after printing control values in console interface
   * Remove Qt4 support
 
- -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 18:15:03 +0000
+ -- David Robillard <d@drobilla.net>  Fri, 27 May 2022 18:38:29 +0000
 
 jalv (1.6.6) stable;
 
